# boost.actor

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_config.hpp.in
examples/: CMakeLists.txt  aout.cpp  hello_world.cpp
examples/brokers/: protobuf_broker.cpp  simple_broker.cpp  simple_http_broker.cpp
examples/curl/: curl_fuse.cpp
examples/message_passing/: calculator.cpp  dancing_kirby.cpp  dining_philosophers.cpp  typed_calculator.cpp
examples/qtsupport/: chatwidget.cpp  chatwidget.hpp  qt_group_chat.cpp
examples/remote_actors/: distributed_calculator.cpp  group_chat.cpp  group_server.cpp
examples/type_system/: announce_1.cpp  announce_2.cpp  announce_3.cpp  announce_4.cpp  announce_5.cpp
libboost_actor_core/: CMakeLists.txt
libboost_actor_core/src/: abstract_actor.cpp  abstract_channel.cpp  abstract_coordinator.cpp  abstract_group.cpp  actor.cpp  actor_addr.cpp  actor_companion.cpp  actor_namespace.cpp  actor_ostream.cpp  actor_pool.cpp  actor_proxy.cpp  actor_registry.cpp  channel.cpp  (+57 more)
libboost_actor_io/: CMakeLists.txt
libboost_actor_io/boost/actor/io/: abstract_broker.hpp  accept_handle.hpp  all.hpp  basp.hpp  basp_broker.hpp  broker.hpp  connection_handle.hpp  doorman.hpp  fwd.hpp  handle.hpp  hook.hpp  max_msg_size.hpp  middleman.hpp  middleman_actor.hpp  publish.hpp  publish_local_groups.hpp  receive_policy.hpp  remote_actor.hpp  remote_group.hpp  scribe.hpp  set_middleman.hpp  spawn_io.hpp  system_messages.hpp  unpublish.hpp
libboost_actor_io/boost/actor/io/experimental/: typed_broker.hpp
libboost_actor_io/boost/actor/io/network/: acceptor_manager.hpp  asio_multiplexer.hpp  interfaces.hpp  manager.hpp  multiplexer.hpp  native_socket.hpp  operation.hpp  protocol.hpp  stream_manager.hpp  test_multiplexer.hpp
libboost_actor_io/src/: abstract_broker.cpp  acceptor_manager.cpp  asio_multiplexer.cpp  basp.cpp  basp_broker.cpp  broker.cpp  doorman.cpp  hook.cpp  interfaces.cpp  manager.cpp  max_msg_size.cpp  middleman.cpp  multiplexer.cpp  publish.cpp  publish_local_groups.cpp  remote_actor.cpp  remote_group.cpp  scribe.cpp  set_middleman.cpp  stream_manager.cpp  test_multiplexer.cpp  unpublish.cpp
libboost_actor_io/test/: automatic_connection.cpp  dynamic_broker.cpp  http_broker.cpp  remote_actor.cpp  remote_spawn.cpp  typed_broker.cpp  typed_remote_actor.cpp  uniform_type.cpp  unpublish.cpp
manual/: ActorManagement.tex  FirstSteps.tex  NetworkIO.tex  NetworkTransparency.tex  SpawningActors.tex  TypeSystem.tex  variables.tex.in
(+200 files in other folders)
